Major cleanup part 1